feat: Cleanup Space Service API to use new Space Template Service - MEED-7638 - Meeds-io/MIPs#150 (#4122)
This change will make a deep cleanup of Space Service Implementation to
use new Space Template Service to check whether the user can create a
space using a template or not. In addition this will make a deep cleanup
to delete old way of Handling Space Layout creation to move it into
layout addon instead.